--- a/css/style.css
+++ b/css/style.css
@@ -96,3 +96,13 @@ li{
     margin-bottom: 0px;
     margin-right: 0px;
 }
+
+.menu-compendio{
+    float: left;
+    position: relative;
+    display: none;
+    background-color: wheat;
+    color: black;
+    width: 100%;
+    height: 360px;
+}
